--- a/src/scss/components/__header.scss
+++ b/src/scss/components/__header.scss
@@ -106,7 +106,6 @@
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
-			gap: 5px;
 			.nav-list__item {
 				position: relative;
 				&:first-of-type {
@@ -141,7 +140,9 @@
 					justify-content: center;
 					gap: 6px;
 					color: #fff;
-					padding: 16px;
+					padding-top: 16px;
+					padding-bottom: 16px;
+					@include adaptiv-value("padding-inline", 16, 1, 1);
 					font-size: 16px;
 					font-weight: 500;
 					white-space: nowrap;
