--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -10,6 +10,9 @@
           .slider-hero__slide {
             position: relative;
             height: 618px;
+            @media (max-width: $tablet) {
+              height: calc(100vh - 300px);
+            }
             border-radius: 8px;
             &--image {
               position: absolute;
@@ -28,8 +31,8 @@
             }
             &--body{
               position: absolute;
-              bottom: 55px;
-              left: 55px;
+              @include adaptiv-value("padding", 55, 15, 1);
+              bottom: 0;
               .hero__details{
                 display: flex;
                 align-items: center;
@@ -88,9 +91,17 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 30px;
     margin-top: 30px;
+    @media (max-width: $tablet) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media (max-width: $mobileSmall) {
+      grid-template-columns: 1fr;
+    }
     &__item {
       display: flex;
       align-items: center;
+      @media (max-width: $tablet) {
+      }
       gap: 12px;
       padding: 30px 12px;
       border: 1px solid $lines;
@@ -109,6 +120,9 @@
     display: grid;
     grid-template-columns: 1fr 300px;
     gap: 30px;
+    @media (max-width: $mobileMedium) {
+      grid-template-columns: 1fr;
+    }
   }
   &__grid {
     display: grid;
@@ -138,6 +152,7 @@
 
 .statistics {
   margin-bottom: 40px;
+  padding: 0 15px;
   &__container {
     padding: 80px 15px;
     height: 100%;
@@ -154,10 +169,15 @@
     align-items: center;
     justify-self: center;
     flex-direction: column;
+    h4 {
+      text-align: center
+    }
     span {
+      @include adaptiv-value("font-size", 96, 58, 1);
       font-size: 96px;
       color: $oxford;
       font-weight: 700;
+      
     }
   }
 }
