--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -5,15 +5,16 @@ h1 {
 	line-height: 64px;
 }
 h2 {
-	@include adaptiv-value("font-size", 36, 28, 1);
+	@include adaptiv-value("font-size", 36, 24, 1);
 	font-weight: 700;
+	line-height: 120%;
 }
 h3 {
 	font-size: 32px;
 	font-weight: 700;
 }
 h4 {
-	font-size: 24px;
+	@include adaptiv-value("font-size", 24, 18, 1);
 	font-weight: 700;
 }
 h5 {
