--- a/src/scss/components/__pagination.scss
+++ b/src/scss/components/__pagination.scss
@@ -4,6 +4,10 @@
 	justify-content: space-between;
 	gap: 10px;
 	padding: 16px;
+  @media (max-width: $mobileMedium) {
+      flex-direction: column;
+      gap: 20px;
+  }
 	&-list{
 		display: flex;
 		align-items: center;
