--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -173,8 +173,6 @@ input {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
 	@include adaptiv-value('gap', 30, 20, 1);
-
-
 }
 
 .page-grid {
@@ -480,8 +478,7 @@ input {
 		flex-direction: column-reverse;
 	}
 	img {
-		width: 100%;
-		max-width: 610px;
+		@include adaptiv-value("width", 610, 300, 1);
 	}
 	&__body {
 		p{
@@ -493,14 +490,19 @@ input {
 			display: block;
 			color: $oxford;
 			text-decoration: underline;
-			margin-bottom: 10px;
+			margin-bottom: 12px;
 			&:hover {
 				color: $azure;
 			}
 		}
-		button {
+		.button {
+			display: flex;
 			max-width: 210px;
 			margin-top: 24px;
+			text-decoration: none;
+			&:hover{
+				color: #FFF;
+			}
 		}
 	}
 }
