--- a/src/scss/components/__header.scss
+++ b/src/scss/components/__header.scss
@@ -84,6 +84,9 @@
 	.header__search {
 		width: 48px;
 		transition: all 0.2s ease-out;
+		@media (max-width: 1110px) {
+			display: none;
+		}
 		&:hover {
 			border-color: $azure;
 		}
@@ -117,7 +120,7 @@
 		@media (max-width: 1110px) {
 			display: none;
 		}
-		&__list {
+		.header-nav__list {
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
@@ -131,22 +134,6 @@
 							width: 24px;
 							height: 24px;
 						}
-					}
-				}
-				&.active {
-					&::after {
-						content: '';
-						position: absolute;
-						left: 0;
-						bottom: -8px;
-						width: 100%;
-						height: 4px;
-						background: linear-gradient(
-							90deg,
-							#5182f6 0%,
-							#ffd200 50%,
-							#f3535b 100%
-						);
 					}
 				}
 				> a {
@@ -212,14 +199,66 @@
 	}
 
 	.header__nav--mobile {
+		padding: 90px 12px 12px 12px;
 		background-color: #fff;
+		transition: 0.3s;
 		position: fixed;
 		max-width: 70%;
 		z-index: 1000;
-		right: -70%;
 		width: 100%;
 		bottom: 0;
 		top: 0;
+		right: -70%;
+		&.active {
+			right: 0;
+		}
+		.header-nav__list {
+			padding: 0;
+			margin-top: 16px;
+			.nav-list__item {
+				border: 1px solid $lines;
+				border-bottom: none;
+				&:last-child {
+					border-bottom: 1px solid $lines;
+				}
+				> a {
+					transition: color 0.2s ease-out;
+					justify-content: space-between;
+					white-space: nowrap;
+					color: $maincolor;
+					font-weight: 500;
+					font-size: 16px;
+					display: flex;
+					padding: 16px;
+					width: 100%;
+					gap: 6px;
+					&:hover {
+						background-color: $oxford;
+						color: #fff;
+					}
+				}
+				.submenu {
+					border-top: 1px solid $lines;
+					width: 100%;
+					.submenu__item {
+						padding: 16px 20px;
+						a {
+							color: $maincolor;
+							font-size: 16px;
+							font-weight: 400;
+							white-space: nowrap;
+							line-height: 24px;
+						}
+						&:hover {
+							background-color: $oxford;
+							a {
+								color: #fff;
+							}
+						}
+					}
+				}
+			}
+		}
 	}
 }
 
